# museum

./: .gitignore  Cargo.toml  build.sh  index.html  index.js  museum-92549736a8bed948.js  museum-cf94cd240a8e64e3.js  package-lock.json  package.json  webpack.config.js
assets/txt/: ben-cited.txt  josh-cited.txt
img/: art.xcf  barrier.xcf  ben-exit-sources.xcf  ben-exit.xcf  birch-floor.xcf  blue-trimmed-wall.xcf  ceiling-panel.xcf  cesar.xcf  concrete.xcf  crown-moulding.xcf  eggshell-wall.xcf  flagstone-floor.xcf  flagstone-floor.xcf.xcf  green-trimmed-wall.xcf  headphones.xcf  intro-wall.xcf  josh-exit-sources.xcf  josh-exit.xcf  limestone-wall.xcf  linoleum-floor.xcf  martin-luther-king-jr.xcf  matt-exit-sources.xcf  matt-exit.xcf  modern-protestors.xcf  news.xcf  oak-floor.xcf  other-intro.xcf  protest-image.xcf  reagan.xcf  red-tile-floor.xcf  red-trimmed-wall.xcf  sky.xcf  starbucks.xcf  tile-floor.xcf  tombstone.xcf  velvet.xcf  wall.xcf  wood-slat-roof.xcf  works-cited.xcf
src/: lib.rs  main.rs  scene.rs  setup.rs
