[package]
name = "museum"
version = "0.1.0"
edition = "2021"

[lib]
name="museum"
crate-type = ["cdylib"]

[dependencies]
bevy = "0.7"
smooth-bevy-cameras = "0.4"
bevy_embedded_assets = "0.3"
impacted = "1.4"
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

#[target.'cfg(target_arch="wasm32")'.profile.dev.package.'*']
